--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.0-next.a671462c",
     "redux": "^4.0.0",
     "redux-promise": "^0.6.0"
@@ -30,5 +32,8 @@
     ]
   },
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "redux-thunk": "^2.3.0"
+  }
 }
