--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,11 +1,16 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Gist",
+  "name": "Gist Manager",
   "icons": [
     {
       "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
+      "sizes": "128x128 64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
+    },
+    {
+      "src": "favicon/mstile-144x144.png",
+      "sizes": "144x144",
+      "type": "image/png"
     }
   ],
   "start_url": "./index.html",
