--- a/manifest.json
+++ b/manifest.json
@@ -9,12 +9,12 @@
     },
     {
       "src": "favicon/mstile-144x144.png",
-      "sizes": "144x144",
+      "sizes": "144x144 192x192 512x512",
       "type": "image/png"
     }
   ],
   "start_url": "./index.html",
   "display": "standalone",
   "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "background_color": "#000000"
 }
