--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "gh-pages": "^1.2.0",
     "localforage": "^1.7.2",
     "node-sass": "^4.9.2",
+    "prismjs": "^1.15.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.0-next.a671462c",
+    "react-simple-code-editor": "^0.6.1",
     "redux": "^4.0.0",
     "redux-persist": "^5.10.0",
     "redux-promise": "^0.6.0"
