--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-simple-code-editor": "^0.6.1",
     "redux": "^4.0.0",
     "redux-persist": "^5.10.0",
-    "redux-promise": "^0.6.0"
+    "redux-promise": "^0.6.0",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -40,8 +41,5 @@
     ]
   },
   "main": "index.js",
-  "license": "MIT",
-  "devDependencies": {
-    "redux-thunk": "^2.3.0"
-  }
+  "license": "MIT"
 }
